--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 }
 
 apply plugin: 'com.google.gms.google-services'
