--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:name=".SettingsActivity"
             android:label="@string/Settings">
         </activity>
+        <service android:enabled="true" android:name="com.example.crimehelp.MyService" />
     </application>
 
 </manifest>
