--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation "com.google.android.gms:play-services-location:15.0.1"
     implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.android.support:preference-v7:26.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
